--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,16 @@
       <artifactId>storm-redis</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>5.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.latent</groupId>
+      <artifactId>storm-rabbitmq</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
