--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,16 @@
       <artifactId>storm-rabbitmq</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>io.grpc</groupId>
+      <artifactId>grpc-all</artifactId>
+      <version>1.20.0</version>
+    </dependency>
   </dependencies>
 
   <build>
