--- a/pom.xml
+++ b/pom.xml
@@ -122,10 +122,6 @@
       <version>3.2.1</version>
     </dependency>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.apache.storm</groupId>
       <artifactId>storm-metrics</artifactId>
       <version>${project.version}</version>
@@ -163,7 +159,7 @@
     <dependency>
       <groupId>com.rabbitmq</groupId>
       <artifactId>amqp-client</artifactId>
-      <version>5.7.0</version>
+      <version>4.0.0</version> <!-- 5.7.0 -->
     </dependency>
     <dependency>
       <groupId>io.latent</groupId>
